--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,22 +19,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Home</a>
+                        <a class="page-scroll" href="#">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Module 1</a>
+                        <a class="page-scroll" href="/module/1">Module 1</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Module 2</a>
+                        <a class="page-scroll" href="/module/2">Module 2</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Module 3</a>
+                        <a class="page-scroll" href="/module/3">Module 3</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Module 4</a>
+                        <a class="page-scroll" href="/module/4">Module 4</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Extra resources</a>
+                        <a class="page-scroll" href="/extra">Extra resources</a>
                     </li>
                 </ul>
             </div>
@@ -47,9 +47,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <!-- <div class="intro-lead-in">Welcome To Our Studio!</div> -->
+                <div class="intro-heading">EVAP (English)</div>
+                <!-- <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a> -->
             </div>
         </div>
     </header>
