finished draft of first section

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,7 +7,7 @@
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-6">
                     <h4 class="service-heading">This course is intended to provide you with the tools needed to read, understand, analyze and transmit the messages in the texts, videos, conversations, lectures, etc. that you will be required to analyze during your academic and professional career, thus helping you to develop critical reasoning skills; encourage the development of written and verbal and not verbal abilities that will allow your to communicate  ideas and knowledge effectively, in an orderly and considered way; instill academic rigor in your investigations and expositions.This will be a wonderful semester with a lot of learning and growth, I am glad we can start this amazing journey together.</h4>
                 </div>
@@ -23,5 +23,17 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h4>Course objective</h4>
+                    <p>At the end of the semester, the students will show improvement in their communication skills. They will be able to write different types of texts effectively. They will also know how to give a better presentation or to participate efficiently in different communication formats. </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h4>Course characteristics</h4>
+                    <p>Use of technology  -  Autonomous learners -  Adaptive</p>
+                </div>
+            </div>            
         </div>
     </section>
