youtube embed video not working yet

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <h4 class="">This course is intended to provide you with the tools needed to read, understand, analyze and transmit the messages in the texts, videos, conversations, lectures, etc. that you will be required to analyze during your academic and professional career, thus helping you to develop critical reasoning skills; encourage the development of written and verbal and not verbal abilities that will allow your to communicate  ideas and knowledge effectively, in an orderly and considered way; instill academic rigor in your investigations and expositions.This will be a wonderful semester with a lot of learning and growth, I am glad we can start this amazing journey together.</h4>
+                    <p>This course is intended to provide you with the tools needed to read, understand, analyze and transmit the messages in the texts, videos, conversations, lectures, etc. that you will be required to analyze during your academic and professional career, thus helping you to develop critical reasoning skills; encourage the development of written and verbal and not verbal abilities that will allow your to communicate  ideas and knowledge effectively, in an orderly and considered way; instill academic rigor in your investigations and expositions.This will be a wonderful semester with a lot of learning and growth, I am glad we can start this amazing journey together.</p>
                 </div>
                 <div class="col-md-6">
                     <iframe
