--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,14 +14,14 @@
                 <div class="col-md-6">
                     <iframe
                       src="https://www.youtube.com/embed/nIQhHEWpdWs"
-                      width="700"
-                      height="480"
+                      width="600"
+                      height="430"
                       frameborder="0"
                       allowfullscreen="">
                     </iframe>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="margin-top: 15px">
                 <div class="col-md-12">
                     <h4>Course objective</h4>
                     <p>At the end of the semester, the students will show improvement in their communication skills. They will be able to write different types of texts effectively. They will also know how to give a better presentation or to participate efficiently in different communication formats. </p>
