--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -219,7 +219,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #{{ site.data.template.color.primary }};
+    color: #000;
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -269,7 +269,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
+    /*background-image: url('{{ site.baseurl }}/img/header-bg.jpg');*/
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -295,9 +295,9 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 50px;
+    font-size: 18px;
+    /*font-weight: 700;*/
+    /*line-height: 50px;*/
 }
 
 @media(min-width:768px) {
@@ -309,7 +309,7 @@ header .intro-text .intro-heading {
     header .intro-text .intro-lead-in {
         margin-bottom: 25px;
         font-family: {{ site.data.template.font.secondary }};
-        font-size: 40px;
+        font-size: 22px;
         font-style: italic;
         line-height: 40px;
     }
@@ -318,14 +318,14 @@ header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: {{ site.data.template.font.primary }};
-        font-size: 75px;
-        font-weight: 700;
-        line-height: 75px;
+        font-size: 18px;
+        /*font-weight: 700;*/
+        /*line-height: 75px;*/
     }
 }
 
 section {
-    padding: 100px 0;
+    padding: 20px 0;
 }
 
 section h2.section-heading {
@@ -345,7 +345,7 @@ section h3.section-subheading {
 
 @media(min-width:768px) {
     section {
-        padding: 150px 0;
+        padding: 90px 0;
     }
 }
 
